--- a/saas/components/_aboute.scss
+++ b/saas/components/_aboute.scss
@@ -28,3 +28,19 @@
 {
     margin-right: 0;
 }
+.aboute-title {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: var(--main-color);
+    margin-bottom: 4px;
+    
+    }
+    .about-title__after {
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.03em;
+    color: var(--second-color);
+    
+    }
