--- a/saas/main.scss
+++ b/saas/main.scss
@@ -12,3 +12,6 @@
 @import './components/forms';
 @import './components/aboute';
 @import './components/socials';
+@import './components/details';
+@import './components/product';
+@import './components/team';
