--- a/saas/components/_section.scss
+++ b/saas/components/_section.scss
@@ -16,87 +16,6 @@
     display: flex;
 }
 
-
-.items {
-    font-weight: 700;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: var(--main-color);
-margin-top: 30px;
-    margin-bottom: 10px;
-}
-
-
-.details {
-    padding-top: 94px;  
-}
-
-.items__text {
-    
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
-color: var(--second-color);
-
-margin-top: 0;
-margin-bottom: 0;
-padding-left: 0;
-display: flex;
-    gap: 30px;
-
-}
-
-.product__list {
-    display: flex;
-    gap: 30px;
-   margin-top: 0;
-   margin-bottom: 0;
-   padding-left: 0;
-}
-.product__text {
-    
-
-font-size: 36px;
-line-height: 1.16;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--main-color);
-margin-top: 0;
-margin-bottom: 50px;
-
-}
-.product {
-    padding-top: 94px;
-padding-bottom: 94px;
-}
-
-.comanda {
-    
-font-size: 16px;
-line-height: 1.18;
-font-weight: 500;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--main-color);
-padding: 10px;
-
-}
-.product--comanda {
-    padding-top: 94px;
-    padding-bottom: 94px;
-    background: #F5F4FA;
-    
-}
-.comanda__profession {
-font-size: 16px;
-line-height: 1.18;
-color: #757575;
-margin-bottom: 16px;
-
-}
-
 .home-contacts {
 font-style: normal;
 font-size: 14px;
@@ -107,22 +26,7 @@ margin-bottom: 9px;
 
 }
 
-.aboute-title {
-font-weight: 700;
-font-size: 18px;
-line-height: 2;
-letter-spacing: 0.06em;
-color: var(--main-color);
-margin-bottom: 4px;
 
-}
-.about-title__after {
-font-size: 16px;
-line-height: 1.87;
-letter-spacing: 0.03em;
-color: var(--second-color);
-
-}
 
 .floor {
 
@@ -188,18 +92,7 @@ text-align: left;
     border-top: none;
     text-align: left;
 }
-.product__picture {
-    display: block;
-    flex-basis: calc((100% - 60px)/3);
-}
-.product__foto {
-    display: block;
-    flex-basis: calc((100% - 90px)/4);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    transition-property: var(--accent-color);
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+
 
 
 
@@ -214,15 +107,6 @@ text-align: left;
 }
     
     
-.team-img {
-    padding-bottom: 30px;
-    padding-top: 10px;
-    background: var(--third-color);
-}
-
-
-
-
 
 .join {
     margin-bottom: 20px;
@@ -246,7 +130,18 @@ color: #FFFFFF;
     text-decoration: none;
     
 }
+.section-client__text {
+    
 
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-color);
+    margin-top: 0;
+    margin-bottom: 50px;
+    
+    }
 .section-client__list {
    display: flex;
    justify-content: center;
@@ -275,16 +170,7 @@ color: #AFB1B8;
 }
 
 }
-.clients {
-    width: 270px;
-    height: 120px;
-display: flex;
-   justify-content: center;
-   align-items: center;
-   background: #F5F4FA;
-   border-radius: 4px;
-    
-}
+
 .section-client__icon {
     fill: currentColor;
 }
@@ -309,26 +195,6 @@ display: flex;
 
     
     
-
-.desk__text {
-    display: flex;
-    position: absolute;
-    width: 370px;
-    height: 70px;
-    color: var(--third-color);
-    justify-content: center;
-    align-items:center ;
-    top: 224px;
-    background-color:  rgba(47, 48, 58, 0.8);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: calc(16/14);
-    text-transform: uppercase;
-}
-.desk{
-    display: flex;
-    position: relative;
-}
 
 
 .backdrope {
